--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ msgpack==1.1.0
 psutil==6.1.1
 matplotlib==3.10.0
 pandas==2.2.3
-cityhash==0.4.7
 requests==2.32.3
-ijson
 customtkinter
+selenium
+webdriver_manager
